# hello_rust_c-

./: CMakeLists.txt
cpp_app/: CMakeLists.txt  main.cpp
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
